--- a/copyright-policy/index.html
+++ b/copyright-policy/index.html
@@ -1,13 +1,99 @@
+---
+redirect_from: "/foo/"
+---
 <!doctype html>
 <html>
 	<head>
 		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143888859-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-143888859-1');
+</script>
+
+
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+
+		<!-- Page Title -->
+		<title>Good Use</title>
+
+		<!-- Compressed Styles -->
+		<link href="css/slides.min.css?422331" rel="stylesheet" type="text/css">
+
+	<!-- Custom Styles -->
+	<link href="css/custom.css" rel="stylesheet" type="text/css">
+
+	<!-- jQuery 3.3.1 -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+	<!-- Compressed Scripts -->
+	<script src="js/slides.min.js?422331" type="text/javascript"></script>
+
+	<!-- Custom Scripts -->
+	<!-- <script src="js/custom.js" type="text/javascript"></script> -->
+
+	<!-- Fonts and Material Icons -->
+		<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600,700&display=swap" rel="stylesheet">
 	</head>
 
 	<body class="slides scroll simplifiedMobile noPreload animated">
 
-	test
+		<!-- Slide 1 (#10) -->
+		<section class="slide whiteSlide">
+			<div class="nav">
+				<div class="hideForMobile">
+					<img src="assets/img/good-use-co-logo-vertical.svg" alt="" class="logo">
+				</div>
+
+				<div class="showForMobile" style="display:none">
+					<img src="assets/img/good-use-co-logo-horizontal.svg" alt="" class="logo-mobile">
+				</div>
+			</div>
+
+		  <div class="content">
+		    <div class="container">
+		      <div class="wrap">
+
+		        <p>Effective date: September 19, 2019</p>
+						<p>In accordance with the DMCA, we have adopted the policy below toward copyright infringement.  We reserve the right to (1) block access to or remove material that we believe in good faith to be copyrighted material that has been illegally copied and distributed by any of our advertisers, affiliates, content providers, members or users and (2) remove and discontinue service to repeat offenders.</p>
+						<p>Remember that your use of the Services is at all times subject to the Terms of Use https://goodu.se/terms-of-use, which incorporates this Copyright Dispute Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the Terms of Use https://goodu.se/terms-of-use.</p>
+Procedure for Reporting Copyright Infringements.  If you believe that material or content residing on or accessible through the Services infringes your copyright (or the copyright of someone whom you are authorized to act on behalf of), please send a notice of copyright infringement containing the following information to the Good Use’s Designated Agent to Receive Notification of Claimed Infringement (our “Designated Agent,” whose contact details are listed below):
+A physical or electronic signature of a person authorized to act on behalf of the owner of the copyright that has been allegedly infringed;
+Identification of works or materials being infringed;
+Identification of the material that is claimed to be infringing including information regarding the location of the infringing materials that the copyright owner seeks to have removed, with sufficient detail so that Good Use is capable of finding and verifying its existence;
+Contact information about the notifier including address, telephone number and, if available, email address;
+A statement that the notifier has a good faith belief that the material identified in (1)(c) is not authorized by the copyright owner, its agent, or the law; and
+A statement made under penalty of perjury that the information provided is accurate and the notifying party is authorized to make the complaint on behalf of the copyright owner.
+Once Proper Bona Fide Infringement Notification is Received by the Designated Agent.  Upon receipt of a proper notice of copyright infringement, we reserve the right to:
+remove or disable access to the infringing material;
+notify the content provider who is accused of infringement that we have removed or disabled access to the applicable material; and
+terminate such content provider's access to the Services if he or she is a repeat offender.
+Procedure to Supply a Counter-Notice to the Designated Agent.  If the content provider believes that the material that was removed (or to which access was disabled) is not infringing, or the content provider believes that it has the right to post and use such material from the copyright owner, the copyright owner's agent, or, pursuant to the law, the content provider may send us a counter-notice containing the following information to the Designated Agent:
+A physical or electronic signature of the content provider;
+Identification of the material that has been removed or to which access has been disabled and the location at which the material appeared before it was removed or disabled;
+A statement that the content provider has a good faith belief that the material was removed or disabled as a result of mistake or misidentification of the material; and
+Content provider's name, address, telephone number, and, if available, email address, and a statement that such person or entity consents to the jurisdiction of the Federal Court for the judicial district in which the content provider’s address is located, or, if the content provider's address is located outside the United States, for any judicial district in which Good Use is located, and that such person or entity will accept service of process from the person who provided notification of the alleged infringement.
+If a counter-notice is received by the Designated Agent, Good Use may, in its discretion, send a copy of the counter-notice to the original complaining party informing that person that Good Use may replace the removed material or cease disabling it in ten (10) business days. Unless the copyright owner files an action seeking a court order against the content provider accused of committing infringement, the removed material may be replaced or access to it restored in ten (10) to fourteen (14) business days or more after receipt of the counter-notice, at Good Use’s discretion.
+<p>Please contact Good Use’s Designated Agent at the following address: Good Use Co., Copyright, 510 Market St. Suite 301, San Diego CA 92101.  </p>
+
+		      </div>
+		    </div>
+		  </div>
+
+		  <div class="footer">
+		  	<ul class="fix-7-12">
+		  		<li><a href="copyright-policy">Copyright Dispute Policy</a></li>
+		  		<li><a href="privacy-policy">Privacy Policy</a></li>
+		  		<li><a href="terms-of-use">Terms of Use</a></li>
+		  	</ul>
+		  </div>
+		</section>
 
 
 	</body>
