--- a/copyright-policy/index.html
+++ b/copyright-policy/index.html
@@ -94,9 +94,9 @@
 
 		  <div class="footer">
 		  	<ul>
-		  		<li><a href="copyright-policy">Copyright Dispute Policy</a></li>
-		  		<li><a href="privacy-policy">Privacy Policy</a></li>
-		  		<li><a href="terms-of-use">Terms of Use</a></li>
+		  		<li><a href="../copyright-policy">Copyright Dispute Policy</a></li>
+		  		<li><a href="../privacy-policy">Privacy Policy</a></li>
+		  		<li><a href="../terms-of-use">Terms of Use</a></li>
 		  	</ul>
 		  </div>
 		</section>
