--- a/copyright-policy/index.html
+++ b/copyright-policy/index.html
@@ -46,6 +46,8 @@
 		  <div class="content">
 		    <div class="container">
 
+		    		<h2>Copyright Dispute Policy</h2>
+
 		        <p>Effective date: September 19, 2019</p>
 						<p>In accordance with the DMCA, we have adopted the policy below toward copyright infringement.  We reserve the right to (1) block access to or remove material that we believe in good faith to be copyrighted material that has been illegally copied and distributed by any of our advertisers, affiliates, content providers, members or users and (2) remove and discontinue service to repeat offenders.</p>
 						<p>Remember that your use of the Services is at all times subject to the Terms of Use https://goodu.se/terms-of-use, which incorporates this Copyright Dispute Policy.  Any terms we use in this Policy without defining them have the definitions given to them in the Terms of Use https://goodu.se/terms-of-use.</p>
